opened packages for JBR17+ : passing CompilationContext from build scripts
GitOrigin-RevId: 21c0eadac08d230fb21d7b82cee165c024e96620